# HEARTS-brl

./: .gitignore  README.md  ip_test.py  navigation_camera_mgr_example.py  prankittext.txt  to disable head_manager.txt  to sync time.txt  topics.txt
brl_ipcam/: CMakeLists.txt  package.xml
brl_ipcam/conf/: cameras.json  passwords.json
brl_ipcam/launch/: brl_ipcam.launch
brl_ipcam/scripts/: ipcam.py  ipcam_hs.py  ipcam_node.py
fbm1_object_perception/: CMakeLists.txt  package.xml
fbm1_object_perception/launch/: cloudsight_kaya.launch  cloudsight_wed.launch  fbm1.launch  fbm1_2018.launch  object_perception_surf.launch  usb_cam.launch
fbm1_object_perception/scripts/: cloudsight_object_perception.py  cropper.py
fbm1_object_perception/src/: macros.hpp  object_perception_node.cpp  object_perception_node.hpp
fbm2_navigation/: CMakeLists.txt  README.md  README_BenchmarkBox.md  package.xml
fbm2_navigation/launch/: benchmark_test.launch  fbm2_controller.launch  nolog_controller.launch  test_controller.launch
fbm2_navigation/scripts/: benchmark_test.py  fbm2_controller.py
fbm3_speech_understanding/: CMakeLists.txt  fbm3.bsh  package.xml
fbm3_speech_understanding/data_in/: TrainingDatasetVerbs.csv
fbm3_speech_understanding/launch/: sr.launch  th.launch
fbm3_speech_understanding/scripts/: t2cfr.py  th.py
fbm3_speech_understanding/src/: t2cfr.py  th.py
hearts_arm_control/: CMakeLists.txt  Command line experiments  package.xml
hearts_arm_control/scripts/: arm_destination_test.py  move_test.py
hearts_camera_saver/: CMakeLists.txt  package.xml
hearts_camera_saver/launch/: hearts_camera_saver.launch
hearts_camera_saver/scripts/: save_cam_images.py
hearts_crop/: CMakeLists.txt  package.xml
hearts_crop/launch/: test.launch
hearts_crop/scripts/: cropper.py
hearts_face_uniform/: CMakeLists.txt  package.xml
hearts_face_uniform/launch/: face_uniform.launch  hearts_face_uniform.launch  hearts_face_uniform_test.launch
hearts_face_uniform_reg/: CMakeLists.txt  package.xml
hearts_head/: package.xml
hearts_nav_msgs/: package.xml
hearts_navigation/: CMakeLists.txt  TiagoNavigationNotes.txt  package.xml
hearts_obj_rec_1/: CMakeLists.txt  package.xml
hearts_person_detector/: CMakeLists.txt  package.xml
hearts_person_tracker/: CMakeLists.txt  package.xml
hearts_robot_pose/: CMakeLists.txt  package.xml
hearts_stt/: CMakeLists.txt  package.xml
hearts_test_package/: CMakeLists.txt  package.xml
hearts_tmp/: commands.txt
hearts_tools/: CMakeLists.txt  package.xml
hearts_tools/src/: transformations.cpp
hearts_top_map/: CMakeLists.txt  package.xml
hearts_top_map/src/: top_pov2map_cli.cpp  top_pov2map_srv.cpp
hearts_top_pov/: CMakeLists.txt  package.xml
hearts_tts/: CMakeLists.txt  package.xml
hearts_webcam/: CMakeLists.txt  package.xml
hearts_xtion/: CMakeLists.txt  package.xml
hearts_xtion/src/: xtion_src_node.cpp
python_support_library/: CMakeLists.txt  package.xml  setup.py
tbm1_getting_to_know_my_home/: CMakeLists.txt  README.md  package.xml
tbm2_welcoming_visitors/: CMakeLists.txt  package.xml  tbm2.txt
tbm3_granny_annies_comfort/: CMakeLists.txt  package.xml
tbm4_visit_my_home/: CMakeLists.txt  package.xml
(+117 files in other folders)
